fix: overflow concertado

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,10 +9,11 @@
     max-width: 100%;
     /* flex: 1; */
     /* border-color: red 5px solid; */
+    overflow-wrap: break-word;
     overflow-x: hidden;
   }
   .content-portifolio {
-    width: 100%;
+    max-width: 100%;
   }
   header {
     display: flex;
@@ -32,7 +33,7 @@
   main .sectio-description {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    max-width: 100%;
     height: 110vh;
     margin-top: 20vh;
     justify-content: center;
@@ -41,14 +42,14 @@
   main .sectio-description .image {
     margin-bottom: 5vh;
     margin-left: 0;
-    width: 90%;
+    max-width: 90%;
   }
   main .sectio-description .image img {
-    width: 80%;
+    max-width: 65%;
     height: 100%;
   }
   main .sectio-description .description {
-    width: 100%;
+    max-width: 100%;
   }
   .description h2 {
     font-size: 30px;
@@ -157,7 +158,7 @@
     
   }
   main .contato .form-contato form button {
-    width: 10vh;
+    max-width: 10vh;
     position: relative;
     right: 100vh;
   }
@@ -202,7 +203,7 @@
     max-width: 200px;
     justify-self: center;
     left: 0;
-    height: 20vh;
+    height: 5vh;
   }
 
   /* .whatsApp {
